workloads/hello-demo/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  labels:
    ingress: hello-nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gorp.DNSDOMAIN
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - gorp.DNSDOMAIN
    secretName: gorp-tls
  rules:
  - host: gorp.DNSDOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-kubernetes
          servicePort: 8080

---
